# elegant-state

./: .gitignore  CITATION.cff  Cargo.toml  Containerfile  ECOSYSTEM.scm  LICENSE.txt  META.scm  README.adoc  README.md  RSR_COMPLIANCE.adoc  STATE.scm  chat-er-diagram.md  codemeta.json  flake.nix
.archive/src/: main.rs
.github/workflows/: codeql.yml  jekyll-gh-pages.yml  quality.yml  rust.yml  scorecard.yml  security-policy.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.well-known/: ai.txt  dc.xml  humans.txt  provenance.json  security.txt
examples/: ECOSYSTEM.scm
guix/elegant-state/: packages.scm
src/: lib.rs  main.rs
src/coordinator/: mod.rs
src/graphql/: subscription.rs
src/store/: fuzzy.rs  sled_store.rs
