[package]
name = "elegant-state"
version = "0.1.0"
edition = "2021"
description = "Local-first state graph for multi-agent orchestration"
license = "MIT"
repository = "https://github.com/Hyperpolymath/elegant-STATE"

[lib]
name = "elegant_state"
path = "src/lib.rs"

[[bin]]
name = "state-cli"
path = "src/main.rs"

[dependencies]
# Database
sled = "0.34"
tantivy = "0.22"              # Full-text search

# Fuzzy matching (agrep-like)
fuzzy-matcher = "0.3"
nucleo-matcher = "0.3"        # Fast fuzzy matching

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
bincode = "1.3"

# IDs
ulid = { version = "1.1", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# GraphQL
async-graphql = "7.0"
async-graphql-axum = "7.0"

# Web server
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
rustyline = "14.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "5.0"
walkdir = "2.4"
fs_extra = "1.3"
regex = "1.10"
rustc_version_runtime = "0.3"

# Async streaming (for subscriptions)
async-stream = "0.3"
futures-util = "0.3"

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
